--- a/test.glade
+++ b/test.glade
@@ -26,7 +26,7 @@
                 <property name="xalign">0</property>
                 <property name="active">True</property>
                 <property name="draw_indicator">True</property>
-                <signal name="toggled" handler="on_lang_c_toggled" swapped="no"/>
+                <signal name="toggled" handler="toggle_lang" swapped="no"/>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -44,7 +44,7 @@
                 <property name="active">True</property>
                 <property name="draw_indicator">True</property>
                 <property name="group">lang_c</property>
-                <signal name="toggled" handler="on_lang_cpp_toggled" swapped="no"/>
+                <signal name="toggled" handler="toggle_lang" swapped="no"/>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -63,7 +63,7 @@
                 <property name="active">True</property>
                 <property name="draw_indicator">True</property>
                 <property name="group">lang_c</property>
-                <signal name="toggled" handler="on_lang_java_toggled" swapped="no"/>
+                <signal name="toggled" handler="toggle_lang" swapped="no"/>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -81,7 +81,7 @@
                 <property name="active">True</property>
                 <property name="draw_indicator">True</property>
                 <property name="group">lang_c</property>
-                <signal name="toggled" handler="on_lang_py_toggled" swapped="no"/>
+                <signal name="toggled" handler="toggle_lang" swapped="no"/>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -100,7 +100,7 @@
                 <property name="active">True</property>
                 <property name="draw_indicator">True</property>
                 <property name="group">lang_c</property>
-                <signal name="toggled" handler="on_lang_ruby_toggled" swapped="no"/>
+                <signal name="toggled" handler="toggle_lang" swapped="no"/>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -116,16 +116,20 @@
                 <property name="can_focus">True</property>
                 <property name="receives_default">False</property>
                 <property name="xalign">0</property>
+                <property name="yalign">0.50999999046325684</property>
                 <property name="active">True</property>
                 <property name="draw_indicator">True</property>
                 <property name="group">lang_c</property>
-                <signal name="toggled" handler="on_lang_perl_toggled" swapped="no"/>
+                <signal name="toggled" handler="toggle_lang" swapped="no"/>
               </object>
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">True</property>
                 <property name="position">5</property>
               </packing>
+            </child>
+            <child>
+              <placeholder/>
             </child>
           </object>
           <packing>
