--- a/test.glade
+++ b/test.glade
@@ -184,6 +184,7 @@
                         <property name="left_margin">2</property>
                         <property name="right_margin">2</property>
                         <property name="show_line_numbers">True</property>
+                        <property name="show_line_marks">True</property>
                         <property name="auto_indent">True</property>
                         <property name="highlight_current_line">True</property>
                       </object>
