--- a/gui/main.glade
+++ b/gui/main.glade
@@ -32,10 +32,10 @@ THE SOFTWARE.
     <property name="can_focus">False</property>
     <property name="stock">gtk-new</property>
   </object>
-  <object class="GtkImage" id="save_image">
+  <object class="GtkImage" id="open">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
-    <property name="stock">gtk-save</property>
+    <property name="stock">gtk-open</property>
   </object>
   <object class="GtkWindow" id="window1">
     <property name="can_focus">False</property>
@@ -69,12 +69,12 @@ THE SOFTWARE.
               </packing>
             </child>
             <child>
-              <object class="GtkButton" id="save">
-                <property name="label" translatable="yes">  Save </property>
+              <object class="GtkButton" id="button_open">
+                <property name="label" translatable="yes">  Open</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <property name="image">save_image</property>
+                <property name="image">open</property>
                 <property name="always_show_image">True</property>
               </object>
               <packing>
@@ -84,7 +84,18 @@ THE SOFTWARE.
               </packing>
             </child>
             <child>
-              <placeholder/>
+              <object class="GtkButton" id="save">
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+                <property name="image">save_image</property>
+                <property name="always_show_image">True</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">2</property>
+              </packing>
             </child>
           </object>
           <packing>
@@ -214,5 +225,10 @@ THE SOFTWARE.
         </child>
       </object>
     </child>
+  </object>
+  <object class="GtkImage" id="save_image">
+    <property name="visible">True</property>
+    <property name="can_focus">False</property>
+    <property name="stock">gtk-save</property>
   </object>
 </interface>
