--- a/gui/main.glade
+++ b/gui/main.glade
@@ -179,6 +179,7 @@ THE SOFTWARE.
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
                 <property name="image">run_image</property>
+                <signal name="clicked" handler="on_run_clicked" swapped="no"/>
               </object>
               <packing>
                 <property name="expand">False</property>
