c & c++ compilation capability added

--- a/gui/main.glade
+++ b/gui/main.glade
@@ -84,6 +84,7 @@ THE SOFTWARE.
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <property name="tooltip_text" translatable="yes">Options</property>
                 <property name="image">hide_image</property>
                 <property name="relief">half</property>
                 <property name="always_show_image">True</property>
@@ -100,6 +101,7 @@ THE SOFTWARE.
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <property name="tooltip_text" translatable="yes">New</property>
                 <property name="image">new_image</property>
                 <property name="always_show_image">True</property>
                 <signal name="clicked" handler="new_tab" swapped="no"/>
@@ -132,6 +134,7 @@ THE SOFTWARE.
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <property name="tooltip_text" translatable="yes">Save</property>
                 <property name="image">save_image</property>
                 <property name="always_show_image">True</property>
                 <signal name="clicked" handler="on_save_button_clicked" swapped="no"/>
@@ -148,6 +151,7 @@ THE SOFTWARE.
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <property name="tooltip_text" translatable="yes">Settings</property>
                 <property name="image">settings_image</property>
               </object>
               <packing>
@@ -163,6 +167,7 @@ THE SOFTWARE.
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <property name="tooltip_text" translatable="yes">Toggle Terminal</property>
                 <property name="image">terminal_image</property>
                 <signal name="clicked" handler="on_term_clicked" swapped="no"/>
               </object>
@@ -178,6 +183,7 @@ THE SOFTWARE.
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <property name="tooltip_text" translatable="yes">Run</property>
                 <property name="image">run_image</property>
                 <signal name="clicked" handler="on_run_clicked" swapped="no"/>
               </object>
